--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,15 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-  </head>
-  <body ng-app="starter">
+    <script src="appConfig/stateProviderConfig.js"></script>
+
+    <script src="components/purchase.controller.js"></script>
+    <script src="components/dash.controller.js"></script>
+
+    <script src="services/storage.service.js"></script>
+    <script src="services/purchases.service.js"></script>
+  </head>       d
+  <body ng-app="pistachio">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
