Making “Dashboard” tab functional. - Make sure transactions load when you enter tab - Add loading state when the transactions are loading - Created a folder for dashboard controller and template

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,8 @@
     <script src="appConfig/stateProviderConfig.js"></script>
 
     <script src="components/purchase.controller.js"></script>
-    <script src="components/dash.controller.js"></script>
+
+    <script src="components/dashboard/dash.controller.js"></script>
 
     <script src="services/storage.service.js"></script>
     <script src="services/purchases.service.js"></script>
