Uses ion-autocomplete for the vendor field and made the numbers only validation to be a directive.

--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,16 @@
     <script src="js/app.js"></script>
     <script src="appConfig/stateProviderConfig.js"></script>
 
-    <script src="components/purchase.controller.js"></script>
+    <script src="components/purchase/purchase.controller.js"></script>
     <script src="components/dash.controller.js"></script>
+
+    <script src="directives/numbersOnly.directive.js"></script>
 
     <script src="services/storage.service.js"></script>
     <script src="services/purchases.service.js"></script>
+
+    <script src="lib/ion-autocomplete/dist/ion-autocomplete.js"></script>
+    <link href="lib/ion-autocomplete/dist/ion-autocomplete.css" rel="stylesheet">
 </head>
 <body ng-app="pistachio">
 <!--
